--- a/chat/static/chat/css/main.css
+++ b/chat/static/chat/css/main.css
@@ -1,3 +1,13 @@
+/* ------------ */
+/* COLORS */
+/* ------------- */
+/* ------Green-------- */
+/* Base Color: #4CD137 */
+
+/* --------------- */
+/* MAIN SETUP */
+/* --------------- */
+
 * {
     margin: 0;
     padding: 0;
@@ -8,6 +18,30 @@ body {
     font-family: Arial, Helvetica, sans-serif;
     color: #555;
     font-size: 18px;
+}
+
+/* --------------- */
+/* HEADER */
+/* --------------- */
+
+/* ----------Navbar---------- */
+.navbar-main {
+    position: fixed;
+    top: 0;
+    right: 0;
+    left: 0;
+    z-index: 1030;
+    background-color: #4cd137;
+}
+
+.scrolled-down {
+    transform: translateY(-100%);
+    transition: all 0.3s ease-in-out;
+}
+
+.scrolled-up {
+    transform: translateY(0);
+    transition: all 0.3s ease-in-out;
 }
 
 /* ------------------ */
