--- a/chat/templates/chat/base.html
+++ b/chat/templates/chat/base.html
@@ -9,14 +9,40 @@
     <!-- Libraries -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
         integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous" />
+    <script async src="https://kit.fontawesome.com/78f2495e06.js" crossorigin="anonymous"></script>
 
-    <link rel="shortcut icon" type="image/jpg" href="{% static 'chat/img/favicon.jpg' %}">
+    <link rel="shortcut icon" type="image/png" href="{% static 'chat/img/favicon.png' %}">
     <title>{% block title %} {% endblock title %}</title>
 </head>
 
 <body>
 
     <header>
+        <nav
+            class="navbar navbar-main fixed-top navbar-dark navbar-expand-lg navbar-expand-md navbar-expand-sm navbar-expand">
+            <a class="navbar-brand" href="{% url 'home' %}">
+                <img src="{% static 'chat/img/favicon.png' %}" width="30" height="30"
+                    class="d-inline-block align-top mr-3" alt="" loading="lazy">
+                Orgachat
+            </a>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    {% if not request.user.is_authenticated %}
+                    <li class="nav-item active">
+                        <a class="nav-link" href="{% url 'signupuser' %}">Sign Up / In</a>
+                    </li>
+                    {% else %}
+                    <li class="nav-item active">
+                        <a class="nav-link" href="#Under_Developing"><i class="far fa-user-circle"></i>
+                            {{ user.username }}</a>
+                    </li>
+                    {% endif %}
+                    <li class="nav-item active">
+                        <a class="nav-link" href="{%  url 'users:all_users' %}"><i class="fas fa-users"></i> Users</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
 
         {% if messages %}
         {% for message in messages %}
@@ -25,7 +51,7 @@
             {% else %}
             <div class="alert alert-{{message.tags}} alert-dismissible fade show" role="alert">
                 {% endif %}
-                {{ message }}
+                {{ message|safe }}
                 <button type="button" class="close" data-dismiss="alert" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
@@ -36,11 +62,11 @@
     </header>
 
     <main>
-
         {% block content %}{% endblock content %}
     </main>
 
     <link rel="stylesheet" href="{% static 'chat/css/main.css' %}">
+    <script src="{% static 'chat/js/main.js' %}"></script>
 </body>
 
 </html>
