Updated requirements.txt and added logo

--- a/chat/templates/chat/base.html
+++ b/chat/templates/chat/base.html
@@ -20,9 +20,9 @@
     <header>
         <nav
             class="navbar navbar-main fixed-top navbar-dark navbar-expand-lg navbar-expand-md navbar-expand-sm navbar-expand">
-            <a class="navbar-brand" href="{% url 'home' %}">
-                <img src="{% static 'chat/img/favicon.png' %}" width="30" height="30"
-                    class="d-inline-block align-top mr-3" alt="" loading="lazy">
+            <a class="navbar-brand" style="margin-right: 30px !important" href="{% url 'home' %}">
+                <img src="{% static 'chat/img/favicon.png' %}" width="40" height="40"
+                    class="d-inline-block align-top mr-1" alt="" loading="lazy">
                 Orgachat
             </a>
             <div class="collapse navbar-collapse" id="navbarNav">
