--- a/static/chat/css/main.css
+++ b/static/chat/css/main.css
@@ -1,3 +1,9 @@
+/* ------------ */
+/* COLORS */
+/* ------------- */
+/* ------Green-------- */
+/* Base Color: #4CD137 */
+
 /* --------------- */
 /* MAIN SETUP */
 /* --------------- */
