--- a/static/chat/css/main.css
+++ b/static/chat/css/main.css
@@ -4,6 +4,9 @@
 /* ------Green-------- */
 /* Base Color: #4CD137 */
 
+/* ------Yellow-------- */
+/* #EBC12C  ( In logo ) */
+
 /* --------------- */
 /* MAIN SETUP */
 /* --------------- */
