Added group messages

--- a/chat/templates/chat/base.html
+++ b/chat/templates/chat/base.html
@@ -63,6 +63,7 @@
 
     <main>
         {% block content %}{% endblock content %}
+        <div class="modal-backdrop show fade" id="backdrop" style="display: none;"></div>
     </main>
 
     <link rel="stylesheet" href="{% static 'chat/css/main.css' %}">
