--- a/users/templates/users/signupuser.html
+++ b/users/templates/users/signupuser.html
@@ -10,6 +10,11 @@ organizing your chat{% endblock description %}
 <script src="{% static 'users/js/signupuser.js' %}"></script>
 <link rel="stylesheet" href="{% static 'users/css/signupuser.css' %}">
 
+<div class="" style="margin: 20px auto; text-align: center;">
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/xAJIVX5tXeg" frameborder="0"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+        allowfullscreen></iframe>
+</div>
 <div class="form-wrap">
     <div class="tabs">
         <h3 class="signup-tab"><a href="#" class="active" style="text-decoration: none;">Sign Up</a></h3>
@@ -41,8 +46,10 @@ organizing your chat{% endblock description %}
         <div id="login-tab-content">
             <form class="login-form" action="{% url 'loginuser' %}" method="post">
                 {% csrf_token %}
-                <input type="text" class="input" id="id_username" autocomplete="off" placeholder="Username" name="username" required>
-                <input type="password" class="input" id="id_password" autocomplete="off" placeholder="Password" name="password">
+                <input type="text" class="input" id="id_username" autocomplete="off" placeholder="Username"
+                    name="username" required>
+                <input type="password" class="input" id="id_password" autocomplete="off" placeholder="Password"
+                    name="password">
                 <input type="submit" class="button" value="Login">
             </form>
             <!-- <div class="help-text">
