Responsive embedded explainer video

--- a/chat/templates/chat/home.html
+++ b/chat/templates/chat/home.html
@@ -9,11 +9,13 @@
 <div class="container">
     {% if rooms.count <= 0 %}
     <p>Find and add your friends <a href="{% url 'users:all_users' %}">Here</a></p>
-    <p>Or add a chat group</p>
+    <p>Or click on the bottom right button to add a chat group</p>
+    <p>Add areas from the left sidebar</p>
+    <p>We will make an in-depth explainer video soon, so make sure to subscribe to our <a href="https://www.youtube.com/channel/UCLb42dgmeMCA0gYP_1P6EzA">YouTube channel</a></p>
     <small class="form-text text-muted">You are seeing this because you don't have chat rooms</small>
     <br>
     <br>
-    <div class="iframe-container">
+    <div class="video-container">
         <iframe width="560" height="315" src="https://www.youtube.com/embed/xAJIVX5tXeg" frameborder="0"
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
             allowfullscreen></iframe>
