--- a/static/chat/css/main.css
+++ b/static/chat/css/main.css
@@ -52,17 +52,7 @@ body {
 /* ------------------ */
 
 /* Iframes */
-.iframe-container {
-    position: relative;
-    width: 100%;
-    padding-bottom: 56.25%;
-    height: 0;
-}
-
-.iframe-container iframe {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
+.video-container iframe {
+    max-width: 100%;
+    max-height: 100%;
 }
