--- a/users/templates/users/signupuser.html
+++ b/users/templates/users/signupuser.html
@@ -10,7 +10,7 @@ organizing your chat{% endblock description %}
 <script src="{% static 'users/js/signupuser.js' %}"></script>
 <link rel="stylesheet" href="{% static 'users/css/signupuser.css' %}">
 
-<div class="iframe-container">
+<div class="video-container" style="text-align: center;">
     <iframe width="560" height="315" src="https://www.youtube.com/embed/xAJIVX5tXeg" frameborder="0"
         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
         allowfullscreen></iframe>
