--- a/chat/static/chat/css/main.css
+++ b/chat/static/chat/css/main.css
@@ -56,3 +56,12 @@ body {
     max-width: 100%;
     max-height: 100%;
 }
+
+/* ------Buttons------- */
+.btn-success {
+    background-color: #4CD137;
+}
+
+.btn-warning {
+    background-color: #EBC12C;
+}
