Fixed not hiding the add-to-homescreen button

--- a/chat/templates/chat/home.html
+++ b/chat/templates/chat/home.html
@@ -62,7 +62,7 @@
 <script>
     let deferredPrompt;
     const addBtn = document.querySelector('#addToHomescreen');
-    // addBtn.style.display = 'none';
+    addBtn.style.display = 'none';
     window.addEventListener('beforeinstallprompt', (e) => {
         // Prevent Chrome 67 and earlier from automatically showing the prompt
         e.preventDefault();
